--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -683,6 +683,10 @@ header {
 }
 
 @media (max-width: 576px) {
+  .solutions,
+  .about-section {
+    border-left-width: 5px;
+  }
   .is-mobile-header {
     display: block;
   }
