--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -34,7 +34,6 @@ html {
 body {
   display: flex;
   flex-direction: column;
-  height: 100%;
   font-family: $mainFont;
   font-size: $mainFontSize;
   font-weight: $mainFontWeight;
@@ -449,8 +448,14 @@ header {
 }
 
 .solutions__item {
+  cursor: pointer;
   height: 244px;
   background-color: #fff;
+  img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .news__slider {
