--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -660,6 +660,9 @@ header {
   .link-item__image {
     margin: auto;
   }
+  .link-item__descr {
+    text-align: center;
+  }
   .header__top-nav-list > li {
     flex: 0 0 100%;
   }
