--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -139,6 +139,11 @@ header {
   color: #fff;
   font-size: 16px;
   font-weight: 400;
+  transition: color 0.3s ease-in-out;
+  &:hover {
+    text-decoration: underline;
+    color: #fff;
+  }
 }
 
 .header__head {
@@ -330,7 +335,8 @@ header {
   padding: 60px 0;
 }
 
-.our-production__slider {
+.our-production__slider,
+.inner-main__content {
   .swiper-slide {
     display: flex;
     align-items: flex-start;
@@ -878,4 +884,191 @@ header {
       }
     }
   }
+}
+
+.inner-main {
+  width: 100%;
+  max-width: 1380px;
+  margin: auto;
+  padding: 60px 0;
+  .image__wrap {
+    height: 333px;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+    }
+  }
+  .inner-main__text {
+    font-size: 20px;
+    line-height: 176%;
+  }
+  .inner-main__title {
+    font-size: 36px;
+    font-weight: 500;
+    max-width: 700px;
+  }
+}
+.toggle-btn {
+  display: none;
+}
+
+.sticky-wrapper {
+  // height: 2000px;
+}
+.sticky-wrapper {
+  display: flex;
+  align-items: flex-start;
+}
+.position-sticky-elem {
+  width: 20%;
+  top: 20px;
+  position: sticky;
+  background-color: #fff;
+  z-index: 20;
+}
+.inner-main__content {
+  padding-left: 50px;
+  width: 80%;
+}
+
+.position-sticky-elem ul {
+  & > li {
+    font-weight: 400;
+    font-size: 16px;
+    padding: 12px 0;
+    a {
+      color: #000;
+    }
+  }
+}
+.dropdown-inner-page {
+  position: relative;
+  & > a {
+    padding-right: 30px;
+    width: fit-content;
+  }
+}
+.open-drop {
+  transition: transform 0.3s ease-in-out;
+  cursor: pointer;
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  right: 0;
+  top: 16px;
+  &::before {
+    position: absolute;
+    content: "";
+    top: 50%;
+    left: 0;
+    right: 0;
+    transform: translateY(-50%);
+    height: 4px;
+    background-color: #7a7a7a;
+    border-radius: 3px;
+  }
+  &::after {
+    position: absolute;
+    content: "";
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 4px;
+    background-color: #7a7a7a;
+    border-radius: 3px;
+  }
+}
+.dropdown-inner-page {
+  &.opened {
+    & > a {
+      color: #df2407 !important;
+    }
+    & > .open-drop {
+      transform: rotate(45deg);
+      &::after,
+      &::before {
+        background-color: #df2407;
+      }
+    }
+  }
+  .dropdown__content {
+    display: none;
+    padding-left: 30px;
+    a {
+      color: #7a7a7a;
+    }
+  }
+}
+.inner-main__btn {
+  display: none;
+}
+
+@media (max-width: 1280px) {
+  .inner-main .inner-main__title {
+    font-size: 28px;
+  }
+  .inner-main {
+    padding-top: 20px;
+    .our-production {
+      padding: 30px 0;
+    }
+  }
+  .inner-main__btn {
+    display: flex;
+    margin: 20px 0;
+  }
+  .inner-main__content {
+    padding-left: 0;
+  }
+
+  .position-sticky-elem {
+    display: none;
+  }
+  .inner-main__content {
+    width: 100%;
+  }
+}
+.offcanvas {
+  .position-sticky-elem {
+    display: block;
+    overflow-y: auto;
+    overflow-x: visible;
+    padding: 20px;
+    padding-top: 50px;
+    position: static;
+    transform: translateX(0%);
+    width: 100%;
+  }
+}
+
+.position-sticky-elem ul > li a {
+  transition: color 0.2s ease-in-out;
+  &:hover {
+    color: #00abc2;
+  }
+}
+
+@media (max-width: 576px) {
+  .inner-main .inner-main__title {
+    font-size: 24px;
+  }
+  .inner-main {
+    padding: 30px 0;
+    .our-production {
+      padding: 20px 0;
+    }
+    .title-wrapper {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+  }
+  .footer {
+    padding-bottom: 20px;
+  }
+}
+
+.dropdown-start .dropdown__content a {
+  padding-right: 20px;
 }
